# GW-model

./: .gitignore  .gitmodules  CMakeLists.txt  CRU.ipynb  CRU.py  GW.hpp  GWParameters.py  GreensteinWinslow.py  README.md  SSA.cpp  SSA.hpp  common.cpp  common.hpp  currents.cpp  currents.hpp  from_cpp_struct.py  gw.ipynb  gw_martingale.ipynb  gw_metadata.json  helper.ipynb  main.cpp  markov_utils.py  ms_experiment.py  ndarray.hpp  pyGW.cpp  pyGW.hpp  rates.hpp  test.cpp  test.pkl  todo.md
includes/: GW.hpp  GW.tpp  GW_utils.hpp  GW_utils.tpp  SSA.hpp  SSA.tpp  common.hpp  ndarray.hpp  ndarray.tpp  rates.hpp
src/: CMakeLists.txt  GW.cpp  GW.hpp  GW.tpp  GW_currents.hpp  GW_lattice.cpp  GW_lattice_utils.cpp  GW_utils.cpp  Pymodels.cpp  SSA.hpp  __init__.py  common.hpp  gw.ipynb  logging.py  main.cpp  model.hpp  model.py  ndarray.hpp  parameters.py  pyGW.cpp  pyGW.hpp  rates.hpp  serialization.py  utils.py
src/GWModel/: utils.py
src/code_gen/: __init__.py  common.py  cxx.py  python.py
src/includes/: GW.hpp  GW.tpp  GW_lattice.hpp  GW_lattice.tpp  GW_lattice_utils.hpp  GW_lattice_utils.tpp  GW_utils.hpp  GW_utils.tpp  SSA.hpp  SSA.tpp  SSA_lattice.hpp  SSA_lattice.tpp  common.hpp
src/includes/GW/: GW.cpp  GW.hpp  GW_utils.cpp  GW_utils.hpp  SSA.hpp
src/includes/lattice/: GW_lattice.cpp  GW_lattice.hpp  GW_lattice_utils.cpp  GW_lattice_utils.hpp  GW_lattice_utils.tpp  SSA_lattice.hpp
